pre-merge fixes

--- a/.env_example
+++ b/.env_example
@@ -1,5 +1,5 @@
-PlexIP="127.0.0.1"
-PlexToken=""
-NtfyTopicURL=""
-IgnoredUser=""
-CheckInterval="30s"
+PSN_PLEX_IP="127.0.0.1"
+PSN_PLEX_TOKEN=""
+PSN_NTFY_TOPIC_URL=""
+PSN_IGNORED_USER=""
+PSN_CHECK_INTERVAL="30s"
